add comiple model

--- a/notebooks/02_CNN_models/Untitled.ipynb
+++ b/notebooks/02_CNN_models/Untitled.ipynb
@@ -151,7 +151,7 @@
     "# UNQ_C3\n",
     "# GRADED FUNCTION: ResNet50\n",
     "\n",
-    "def ResNet50(input_shape = (64, 64, 3), classes = 6, training=False):\n",
+    "def ResNet50(input_shape = (64, 64, 3), training=False):\n",
     "    \"\"\"\n",
     "    Stage-wise implementation of the architecture of the popular ResNet50:\n",
     "    CONV2D -> BATCHNORM -> RELU -> MAXPOOL -> CONVBLOCK -> IDBLOCK*2 -> CONVBLOCK -> IDBLOCK*3\n",
@@ -159,7 +159,6 @@
     "\n",
     "    Arguments:\n",
     "    input_shape -- shape of the images of the dataset\n",
-    "    classes -- integer, number of classes\n",
     "\n",
     "    Returns:\n",
     "    model -- a Model() instance in Keras\n",
@@ -223,7 +222,7 @@
     "\n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
-    "    X = Dense(classes, activation='softmax', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Dense(1, activation='sigmoid')(X)\n",
     "    \n",
     "    \n",
     "    # Create model\n",
@@ -257,6 +256,71 @@
     "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
     "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
     "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a9f0e6-52d2-47fb-9bf6-6cd915dd020b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Train positives:\", np.sum(Y_train))\n",
+    "print(\"Train negatives:\", Y_train.shape[0] - np.sum(Y_train))\n",
+    "\n",
+    "print(\"Test positives:\", np.sum(Y_test))\n",
+    "print(\"Test negatives:\", Y_test.shape[0] - np.sum(Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36a7c309-19c5-4606-9df8-cce249ca77fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neg = 765\n",
+    "pos = 1847\n",
+    "total = neg + pos\n",
+    "\n",
+    "weight_for_0 = total / (2 * neg)\n",
+    "weight_for_1 = total / (2 * pos)\n",
+    "\n",
+    "class_weight = {\n",
+    "    0: weight_for_0,  # not damaged\n",
+    "    1: weight_for_1   # damaged\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1edb48b-a200-4d67-a99b-7c3953b51f05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ResNet50(input_shape = (64, 64, 3))\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e7d63a-6039-47e8-8bba-5297e6306baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = tf.keras.optimizers.Adam(learning_rate=0.0005)\n",
+    "model.compile(\n",
+    "    optimizer=opt,\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=[\n",
+    "        'accuracy',\n",
+    "        tf.keras.metrics.Precision(),\n",
+    "        tf.keras.metrics.Recall(),\n",
+    "        tf.keras.metrics.AUC()\n",
+    "    ]\n",
+    ")\n"
    ]
   }
  ],
