resnets_utils code added

--- a/notebooks/02_CNN_models/Untitled.ipynb
+++ b/notebooks/02_CNN_models/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "77584431-105a-4336-af04-6a071ebf9a82",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,6 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import Input, Add, Dense, Activation, ZeroPadding2D, Flatten, Conv2D, AveragePooling2D, MaxPooling2D, GlobalMaxPooling2D\n",
     "from tensorflow.keras.models import Model, load_model\n",
-    "from resnets_utils import *\n",
     "from tensorflow.keras.initializers import random_uniform, glorot_uniform, constant, identity\n",
     "from tensorflow.python.framework.ops import EagerTensor\n",
     "from matplotlib.pyplot import imshow\n",
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4c9660bc-fe43-4f36-b74a-5498800229fd",
    "metadata": {},
    "outputs": [],
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db1d7203-e34f-4e5f-ae34-3ae664eef72e",
    "metadata": {},
    "outputs": [],
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4b8b1f64-79e8-4da2-b00a-8af809627020",
    "metadata": {},
    "outputs": [],
@@ -233,10 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "229ff11e-dd10-4e8f-9daf-779bcf379b6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: m_train = 2612\n",
+      "Number of testing examples: m_test = 327\n",
+      "train_set_x shape: (2612, 64, 64, 3)\n",
+      "train_set_y shape: (2612,)\n",
+      "test_set_x shape: (327, 64, 64, 3)\n",
+      "test_set_y shape: (327,)\n"
+     ]
+    }
+   ],
    "source": [
     "with h5py.File(\"../../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\", \"r\") as f:\n",
     "    X_train_org = f[\"X_train\"][:]\n",
@@ -244,26 +256,40 @@
     "    X_test_org  = f[\"X_test\"][:]\n",
     "    Y_test_org  = f[\"Y_test\"][:]\n",
     "\n",
-    "m_train = X_train_org.shape[0]\n",
-    "m_test = X_test_org.shape[0]\n",
-    "num_px =X_train_org.shape[1]\n",
+    "Y_train = Y_train_org.reshape(-1)\n",
+    "Y_test  = Y_test_org.reshape(-1)\n",
+    "\n",
+    "X_train = X_train_org / 255.0\n",
+    "X_test  = X_test_org / 255.0\n",
+    "\n",
+    "m_train = Y_train.shape[0]\n",
+    "m_test = Y_test.shape[0]\n",
     "\n",
     "print (\"Number of training examples: m_train = \" + str(m_train))\n",
     "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
-    "print (\"Height/Width of each image: num_px = \" + str(num_px))\n",
-    "print (\"Each image is of size: (\" + str(num_px) + \", \" + str(num_px) + \", 3)\")\n",
-    "print (\"train_set_x shape: \" + str(X_train_org.shape))\n",
-    "print (\"train_set_y shape: \" + str(Y_train_org.shape))\n",
-    "print (\"test_set_x shape: \" + str(X_test_org.shape))\n",
-    "print (\"test_set_y shape: \" + str(Y_test_org.shape))"
+    "print (\"train_set_x shape: \" + str(X_train.shape))\n",
+    "print (\"train_set_y shape: \" + str(Y_train.shape))\n",
+    "print (\"test_set_x shape: \" + str(X_test.shape))\n",
+    "print (\"test_set_y shape: \" + str(Y_test.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d8a9f0e6-52d2-47fb-9bf6-6cd915dd020b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train positives: 1847\n",
+      "Train negatives: 765\n",
+      "Test positives: 242\n",
+      "Test negatives: 85\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train positives:\", np.sum(Y_train))\n",
     "print(\"Train negatives:\", Y_train.shape[0] - np.sum(Y_train))\n",
@@ -274,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "36a7c309-19c5-4606-9df8-cce249ca77fa",
    "metadata": {},
    "outputs": [],
@@ -294,10 +320,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a1edb48b-a200-4d67-a99b-7c3953b51f05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-07 11:15:06.280570: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.542779: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.545916: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.549119: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.551622: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.554015: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.698548: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.699689: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.700503: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:998] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2026-02-07 11:15:06.701261: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1928] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2241 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1650, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'BatchNormalization' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mResNet50\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_shape\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39msummary())\n",
+      "Cell \u001b[0;32mIn[8], line 26\u001b[0m, in \u001b[0;36mResNet50\u001b[0;34m(input_shape, training)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Stage 1\u001b[39;00m\n\u001b[1;32m     25\u001b[0m X \u001b[38;5;241m=\u001b[39m Conv2D(\u001b[38;5;241m64\u001b[39m, (\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m7\u001b[39m), strides \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m), kernel_initializer \u001b[38;5;241m=\u001b[39m glorot_uniform(seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m))(X)\n\u001b[0;32m---> 26\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mBatchNormalization\u001b[49m(axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m)(X)\n\u001b[1;32m     27\u001b[0m X \u001b[38;5;241m=\u001b[39m Activation(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m)(X)\n\u001b[1;32m     28\u001b[0m X \u001b[38;5;241m=\u001b[39m MaxPooling2D((\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m3\u001b[39m), strides\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m))(X)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BatchNormalization' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = ResNet50(input_shape = (64, 64, 3))\n",
     "print(model.summary())"
@@ -321,6 +376,16 @@
     "        tf.keras.metrics.AUC()\n",
     "    ]\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad8a065c-c633-4250-b3c6-74e6faeb98aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, Y_train, epochs = 20, batch_size = 64,class_weight=class_weight)"
    ]
   }
  ],
