--- a/notebooks/02_CNN_models/Untitled.ipynb
+++ b/notebooks/02_CNN_models/Untitled.ipynb
@@ -1516,8 +1516,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "47a2b368-442d-4ad0-9308-f184149a0b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step - accuracy: 0.5535 - auc: 0.6136 - loss: 2.4677 - precision: 0.7892 - recall: 0.5413\n",
+      "Loss = 2.4676549434661865\n",
+      "Test Accuracy = 0.5535168051719666\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = model.evaluate(X_test, Y_test)\n",
+    "print (\"Loss = \" + str(preds[0]))\n",
+    "print (\"Test Accuracy = \" + str(preds[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edde16ae-e8cf-40af-9946-87475b4cf42e",
    "metadata": {},
    "outputs": [],
    "source": []
