chache tf data loader

--- a/notebooks/00_data/0_load_data.ipynb
+++ b/notebooks/00_data/0_load_data.ipynb
@@ -508,7 +508,9 @@
    "outputs": [],
    "source": [
     "train_ds = train_ds.cache(\"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
-    "test_ds  = test_ds.cache(\"../../EIDSeg_Dataset/cache/test_binary_any.tfds\")\n"
+    "test_ds  = test_ds.cache(\"../../EIDSeg_Dataset/cache/test_binary_any.tfds\")\n",
+    "tf.data.experimental.save(train_ds, \"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
+    "tf.data.experimental.save(train_ds, \"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n"
    ]
   },
   {
