--- a/notebooks/02_CNN_models/resnets_model.ipynb
+++ b/notebooks/02_CNN_models/resnets_model.ipynb
@@ -465,14 +465,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "edde16ae-e8cf-40af-9946-87475b4cf42e",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'build_binary_any_tf_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_ds, test_ds \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_binary_any_tf_dataset\u001b[49m(\n\u001b[1;32m      2\u001b[0m     train_image_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../EIDSeg_Dataset/data/train/images/default\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m     test_image_dir \u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../EIDSeg_Dataset/data/test/images/default\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      4\u001b[0m     train_xml\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../EIDSeg_Dataset/data/train/train.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m     test_xml \u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../EIDSeg_Dataset/data/test/test.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      6\u001b[0m     img_size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m64\u001b[39m, \u001b[38;5;241m64\u001b[39m),\n\u001b[1;32m      7\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m train_ds \u001b[38;5;241m=\u001b[39m train_ds\u001b[38;5;241m.\u001b[39mcache(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcache/train_binary_any.tfds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m test_ds  \u001b[38;5;241m=\u001b[39m test_ds\u001b[38;5;241m.\u001b[39mcache(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcache/test_binary_any.tfds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'build_binary_any_tf_dataset' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e78b927-bc59-47aa-90fd-56539303ec93",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "train_ds = train_ds.cache(\"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
-    "test_ds  = test_ds.cache(\"../../EIDSeg_Dataset/cache/test_binary_any.tfds\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
