tried with AUTOTUNE

--- a/notebooks/00_data/0_load_data.ipynb
+++ b/notebooks/00_data/0_load_data.ipynb
@@ -502,15 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8414e057-941c-41ad-b8d1-040adebb3ace",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = train_ds.cache(\"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
-    "test_ds  = test_ds.cache(\"../../EIDSeg_Dataset/cache/test_binary_any.tfds\")\n",
-    "tf.data.experimental.save(train_ds, \"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
-    "tf.data.experimental.save(train_ds, \"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n"
+    "\n",
+    "tf.data.Dataset.save(train_ds, \"../../EIDSeg_Dataset/cache/train_binary_any.tfds\")\n",
+    "tf.data.Dataset.save(test_ds, \"../../EIDSeg_Dataset/cache/test_binary_any.tfds\")\n"
    ]
   },
   {
